# aqa-inforce-yuliia_shaposhnikova

./: README.md  pyproject.toml  test-cases.txt
pages/: home_page.py
tests/: conftest.py
tests/ui/: test_tc_ui_001.py
