[tool.poetry]
name = "pyproject-toml"
version = "0.1.0"
description = ""
authors = ["Yuliia Shaposhnikova <domik339@gmail.com>"]
readme = "README.md"
packages = [{include = "pyproject"}]

[tool.poetry.dependencies]
python = "^3.13"
selenium = "^4.43.0"
requests = "^2.33.1"
webdriver-manager = "^4.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

